<?xml version="1.0"?>
<package format="2">
  <name>kitti3d</name>
  <version>0.0.0</version>
  <description>kitti3d package</description>

  <maintainer email="hmx_2013@outlook.com">Hyungtae Lim</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_depend>obsdet_msgs</build_depend>
  <exec_depend>obsdet_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
